--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "jshint": "^2.6.0",
     "lodash": "^3.1.0",
     "mocha": "~2.1.0",
-    "nan": "^1.6.2",
+    "nan": "https://github.com/rvagg/nan/tarball/master",
     "node-gyp": "~1.0.2",
     "nw-gyp": "^0.12.4",
     "request": "^2.53.0",
